manifests/base/resources/data-connector-qwc/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    action: command
    app: data-connector-qwc
    chart: data-connector-qwc-3.0.4
    heritage: Helm
    release: data-connector-qwc
  name: data-connector-qwc-cmd
spec:
  replicas: 1
  selector:
    matchLabels:
      action: command
      app: data-connector-qwc
      release: data-connector-qwc
  template:
    metadata:
      labels:
        action: command
        app: data-connector-qwc
        release: data-connector-qwc
    spec:
      containers:
        - env:
            - name: REDIS_URI
              valueFrom:
                configMapKeyRef:
                  key: redisUri
                  name: data-connector-qwc-configs
            - name: QWC_REDIS_CONFIG_STRING
              value: $(REDIS_URI)
            - name: REDIS_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: redisPassword
                  name: data-connector-qwc-secrets
            - name: QWC_REDIS_PASSWORD
              value: $(REDIS_PASSWORD)
            - name: DATA_HOST
              value: 0.0.0.0
            - name: DATA_PORT_RANGE_START
              value: "50060"
            - name: DATA_PORT_RANGE_END
              value: "50060"
            - name: QWC_LOG_LEVEL
              value: INFO
            - name: QWC_ALLOW_REFERENCE_CONNECTOR
              value: "true"
          image: qliktech-docker.jfrog.io/data-connector-qwc:0.81.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /health
              port: 3005
          name: main
          ports:
            - containerPort: 50060
              name: grpc
              protocol: TCP
            - containerPort: 3005
              name: http
              protocol: TCP
      imagePullSecrets:
        - name: artifactory-docker-secret
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    action: reload
    app: data-connector-qwc
    chart: data-connector-qwc-3.0.4
    heritage: Helm
    release: data-connector-qwc
  name: data-connector-qwc-rld
spec:
  replicas: 1
  selector:
    matchLabels:
      action: reload
      app: data-connector-qwc
      release: data-connector-qwc
  template:
    metadata:
      labels:
        action: reload
        app: data-connector-qwc
        release: data-connector-qwc
    spec:
      containers:
        - env:
            - name: REDIS_URI
              valueFrom:
                configMapKeyRef:
                  key: redisUri
                  name: data-connector-qwc-configs
            - name: QWC_REDIS_CONFIG_STRING
              value: $(REDIS_URI)
            - name: REDIS_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: redisPassword
                  name: data-connector-qwc-secrets
            - name: QWC_REDIS_PASSWORD
              value: $(REDIS_PASSWORD)
            - name: DATA_HOST
              value: 0.0.0.0
            - name: DATA_PORT_RANGE_START
              value: "50060"
            - name: DATA_PORT_RANGE_END
              value: "50060"
            - name: MAX_ACTIVE_RELOADS
              value: "3"
            - name: FILE_TRANSFER_ABOVE_MAX_ALLOWANCE
              value: "2"
            - name: QWC_LOG_LEVEL
              value: INFO
            - name: QWC_ALLOW_REFERENCE_CONNECTOR
              value: "true"
            - name: ENABLE_SHUTDOWN_DRAIN
              value: "false"
            - name: SHUTDOWN_TIMEOUT
              value: "30"
          image: qliktech-docker.jfrog.io/data-connector-qwc:0.81.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /health
              port: 3005
          name: main
          ports:
            - containerPort: 50060
              name: grpc
              protocol: TCP
            - containerPort: 3005
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /readiness
              port: 3005
            initialDelaySeconds: 2
            periodSeconds: 10
      imagePullSecrets:
        - name: artifactory-docker-secret
      terminationGracePeriodSeconds: 30
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    action: web
    app: data-connector-qwc
    chart: data-connector-qwc-3.0.4
    heritage: Helm
    release: data-connector-qwc
  name: data-connector-qwc-web
spec:
  replicas: 1
  selector:
    matchLabels:
      action: web
      app: data-connector-qwc
      release: data-connector-qwc
  template:
    metadata:
      labels:
        action: web
        app: data-connector-qwc
        release: data-connector-qwc
    spec:
      containers:
        - image: qliktech-docker.jfrog.io/data-connector-qwc-web:0.81.0
          imagePullPolicy: null
          livenessProbe:
            httpGet:
              path: /health
              port: 6384
          name: main
          ports:
            - containerPort: 6384
              name: http
              protocol: TCP
      imagePullSecrets:
        - name: artifactory-docker-secret
---
