manifests/base/resources/data-connector-qwc/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "3005"
    prometheus.io/scrape: "true"
  labels:
    action: command
    app: data-connector-qwc
    chart: data-connector-qwc-2.3.0
    heritage: Helm
    release: data-connector-qwc
  name: data-connector-qwc-cmd
spec:
  ports:
  - name: grpc
    port: 50060
    protocol: TCP
    targetPort: 50060
  - name: http
    port: 3005
    protocol: TCP
    targetPort: 3005
  selector:
    action: command
    app: data-connector-qwc
    release: data-connector-qwc
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "3005"
    prometheus.io/scrape: "true"
  labels:
    action: reload
    app: data-connector-qwc
    chart: data-connector-qwc-2.3.0
    heritage: Helm
    release: data-connector-qwc
  name: data-connector-qwc-rld
spec:
  ports:
  - name: grpc
    port: 50060
    protocol: TCP
    targetPort: 50060
  - name: http
    port: 3005
    protocol: TCP
    targetPort: 3005
  selector:
    action: reload
    app: data-connector-qwc
    release: data-connector-qwc
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "9121"
    prometheus.io/scrape: "true"
  labels:
    action: web
    app: data-connector-qwc
    chart: data-connector-qwc-2.3.0
    heritage: Helm
    release: data-connector-qwc
  name: data-connector-qwc-web
spec:
  ports:
  - name: http
    port: 6384
    protocol: TCP
    targetPort: 6384
  selector:
    action: web
    app: data-connector-qwc
    release: data-connector-qwc
  type: ClusterIP
---
